# IPC_LAMMPS

./: .gitignore  .gitmodules  README.md
1-make_potentials/: compute_ipc_geometry.py  from_contact_values_to_potentials.sh  from_contact_values_to_potentials_gui.py  from_epsilon_to_potentials.sh
1-make_potentials/sources/: CMakeLists.txt  build.sh  from_contact_values_to_potentials_gui.sh  from_contact_values_to_potentials_gui.ui  main.cpp  printPotential.cpp  printPotential.hpp
2-startingstate_creators/: face_centered_cubic_janus.py  face_centered_cubic_two_patch.py  simple_cubic_two_patch.py
3-startingstate_creators/: face_centered_cubic_janus.py  simple_cubic_two_patch.py
4-postprocess/: build.sh
advanced/: IPC_modelmap.txt
gnuplot_scripts/: plot_3Dorientations.gpi
inputfiles/: how_to_run.txt
make_potentials/: from_contact_values_to_potentials.sh  from_epsilon_to_potentials.sh  mapContactValuesToCoefficients.sh
postprocess/: CMakeLists.txt  IPCpostprocess.cpp  IPCpostprocess.hpp  IPCpostprocessEccentricityHistogram.cpp  IPCpostprocessMeanSquaredDisplacement.hpp  build.sh  main.cpp
postprocess/dataAnalysisClasses/: IPCpairCorrelation.hpp  IPCpostprocessAxialityDeviationHistogram.cpp  IPCpostprocessAxialityDeviationHistogram.hpp  IPCpostprocessEccentricityHistogram.cpp  IPCpostprocessMeanSquaredDisplacement.cpp  IPCpostprocessMeanSquaredDisplacement.hpp  IPCpostprocessNeighbourAnalysis.cpp  IPCpostprocessNeighbourAnalysis.hpp  IPCpostprocessOrientationsAnalysis.hpp  IPCpostprocessOrientationsAnalysis2D.cpp  IPCpostprocessOrientationsAnalysis2D.hpp  IPCpostprocessOrientationsAnalysis3D.cpp  IPCpostprocessOrientationsAnalysis3D.hpp
printpotential/: inputfile.txt  mapContactValuesToCoefficients.sh  (+1 more)
(+58 files in other folders)
